--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^5.0.0",
-    "react": "^17.0.2",
+    "react": "^17.0.0",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^6.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
@@ -25,8 +26,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-
-
   },
   "eslintConfig": {
     "extends": [
